--- a/src/containers/Homepage/components/Content/index.scss
+++ b/src/containers/Homepage/components/Content/index.scss
@@ -1,53 +1,67 @@
 @import '../../../../variables.scss';
 
 .content {
-    margin-right:19%;
-    .bottom, .school, .bottom2 {
-        display:inline;
+    margin-right: 19%;
+    .bottom,
+    .school,
+    .bottom2 {
+        display: inline;
     }
     .school {
-        font-weight:700;
-        color:$clr-light-blue;
+        font-weight: 700;
+        color: $clr-light-blue;
     }
-    .top, .bottom, .bottom2, .school {
+    .top,
+    .bottom,
+    .bottom2,
+    .school {
         font-size: $font-size-subheader;
     }
     .name {
-        .first, .last {
-            display:inline;
+        .first,
+        .last {
+            display: inline;
             font-size: $font-size-header;
         }
         .last {
-            margin-left:.5rem;
+            margin-left: 0.5rem;
             color: $clr-orange;
         }
     }
-    
+
     //for portrait tablets
-    @media screen and (max-width:1020px) {
-        margin-inline:13%;
+    @media screen and (max-width: 1020px) {
+        margin-inline: 13%;
     }
-    
+
     //for mobile
-    @media screen and (max-width:630px) {
-        margin-inline:10%;
-        .top, .bottom, .bottom2, .school {
-            font-size:$font-size-mobile-subheader;
+    @media screen and (max-width: 630px) {
+        margin-inline: 10%;
+        .top,
+        .bottom,
+        .bottom2,
+        .school {
+            font-size: $font-size-mobile-subheader;
         }
         .name {
-            .first, .last {
-                font-size:$font-size-mobile-header;
+            .first,
+            .last {
+                font-size: $font-size-mobile-header;
             }
         }
     }
-    
-    @media screen and (max-width:320px) {
-        .top, .bottom, .bottom2, .school {
-            font-size:$font-size-small-subheader;
+
+    @media screen and (max-width: 320px) {
+        .top,
+        .bottom,
+        .bottom2,
+        .school {
+            font-size: $font-size-small-subheader;
         }
         .name {
-            .first, .last {
-                font-size:$font-size-small-header;
+            .first,
+            .last {
+                font-size: $font-size-small-header;
             }
         }
     }
