--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,11 +5,14 @@ $clr-dark-blue: #2f67b1;
 $clr-burgundy: #c64c40;
 $clr-blue-gray: #475361;
 $clr-orange: #df741f;
+$clr-orange-over: #ad5e1cd2;
+$clr-error-red: rgb(218, 32, 32);
+$clr-success-green: rgb(42, 133, 42);
 
 $font-regular: 'Segoe UI';
 $font-size-header: 3.75rem;
 $font-size-subheader: 1.875rem;
 $font-size-mobile-header: 2.1875rem;
 $font-size-mobile-subheader: 1.25rem;
-$font-size-small-header:1.7rem;
-$font-size-small-subheader:0.8rem;
+$font-size-small-header: 1.7rem;
+$font-size-small-subheader: 0.8rem;
