--- a/src/containers/Projects/components/Project/index.scss
+++ b/src/containers/Projects/components/Project/index.scss
@@ -19,14 +19,16 @@
         overflow: hidden;
         border-radius: 0.3rem;
         .overlay {
+            overflow: hidden;
             transition: all 200ms;
-            background: $clr-orange;
+            background: $clr-orange-over;
             width: 100%;
             height: 100%;
             object-fit: cover;
             opacity: 0.5;
         }
         img {
+            overflow: hidden;
             width: 100%;
             height: 100%;
             object-fit: cover;
