--- a/src/containers/About/index.scss
+++ b/src/containers/About/index.scss
@@ -1,4 +1,4 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 
 .about {
     background: $clr-soft-white;
@@ -19,5 +19,12 @@
         flex-wrap: wrap;
         gap: 2rem;
         justify-content: center;
+        width: 100%;
+        max-width: 1150px;
+
+        @media screen and (max-width: 912px) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
