remove some unused dependencies, etc

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,7 +9,7 @@ $clr-orange-over: #ad5e1cd2;
 $clr-error-red: rgb(218, 32, 32);
 $clr-success-green: rgb(42, 133, 42);
 
-$font-regular: 'Segoe UI';
+$font-regular: "Segoe UI";
 $font-size-header: 3.75rem;
 $font-size-subheader: 1.875rem;
 $font-size-mobile-header: 2.1875rem;
