--- a/src/containers/Projects/components/Project/index.scss
+++ b/src/containers/Projects/components/Project/index.scss
@@ -48,6 +48,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    max-width: 80%;
+    text-align: center;
 
     .private-banner {
       position: absolute;
