Move the rendering of qualifications out of the data file. Other misc changes

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@
   --text-color: var(--color-dark);
   --text-color-light: #fff;
 }
+
+.mantine-Modal-content {
+  border-radius: 12px;
+}
+
+.mantine-Modal-body {
+  padding: 0;
+  overflow: hidden;
+  border-radius: 12px;
+}
